# derbynames-microservice-markovify

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  Procfile  README.md  app.py  docker-compose.yml  generate-model.py  pyproject.toml  requirements.txt  run-server.sh  setup.cfg
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-image.yml  docker-publish.yml
model/: char_2.bz2  char_2.json  char_3.bz2  char_3.json  char_4.bz2  char_4.json  char_5.bz2  char_5.json  word_2.bz2  word_3.bz2  word_4.bz2  word_5.bz2
templates/: index.html
