[project]
name = ""
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "gunicorn",
    "flask-cors",
    "markovify",
    "pandas",
    "requests",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.python.org/simple"
